@@ -1,0 +1,12 @@
+#include "imgui.h"
+#include "imgui_impl_dx11.h"
+
+#include <stdio.h>
+#include <stdarg.h>
+
+// Wrap this in a namespace to keep it separate from the C++ API
+namespace cimgui
+{
+#include "%OUTPUT_HEADER_NAME%"
+}
+
